fix(radiobutton): make bgcolor white
`RadioButton` should always have a white background, otherwise it looks weird on non-white backgrounds.

--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -19,6 +19,7 @@
     flex-shrink: 0;
     border: 1px solid;
     border-radius: 50%;
+    background-color: color(snow);
 
     &--checked {
       background-color: color(ink);
